--- a/JogoQuiz_FrontEnd/src/app/component/Finish/finish-topo/finish-topo.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Finish/finish-topo/finish-topo.component.html
@@ -1,1 +1,10 @@
-<p>finish-topo works!</p>
+<nav class="navbar bg-dark navbar-dark navbar-expand">
+  <div class="container-fluid">
+    <button data-mdb-ripple-init type="button" class="btn btn-primary">
+      <a routerLink="/Home" class="navbar-brand mb-0"><strong>Principal</strong></a>
+    </button>
+    <button data-mdb-ripple-init type="button" class="btn btn-outline-light btn-rounded btn-sm p-1">
+      <a routerLink="/Login" class="navbar-brand mb-0"><strong>Registrar</strong></a>
+    </button>
+  </div>
+</nav>
