--- a/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
@@ -36,7 +36,7 @@
                   </div>
                   <div class="button d-flex justify-content-center">
                     <button *ngIf="showSpinner" (click)="proximo()" type="button" class="btn btn-warning btn-sm ">
-                      <strong>Próximo</strong>
+                      <strong>Próximo Desafio</strong>
                       <span id="loading" class="countdown">{{ countdownValue }}</span>
                     </button>
                   </div>
