button Sair(Quiz Topo)

--- a/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
@@ -35,7 +35,7 @@
                     </button>
                   </div>
                   <div class="button d-flex justify-content-center">
-                    <button *ngIf="showSpinner" (click)="proximo()" type="button" class="btn btn-warning btn-sm ">
+                    <button *ngIf="showSpinner" (click)="proximo()" type="button" class="btn btn-success btn-sm ">
                       <strong>Próximo Desafio</strong>
                       <span id="loading" class="countdown">{{ countdownValue }}</span>
                     </button>
