--- a/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-topo/quiz-topo.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-topo/quiz-topo.component.html
@@ -1,10 +1,8 @@
 <nav class="navbar bg-dark navbar-dark navbar-expand">
-  <div class="container-fluid">
-    <div *ngIf="playerFindById | async as player">
+  <div class="container-fluid justify-content-center">
       <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-      <button (click)="novoJogo()" type="button" class="btn btn-success"><strong>Resetar</strong></button>
-      <button type="button" class="btn btn-danger">Left</button>
+      <button (click)="novoJogo()" type="button" class="btn btn-warning"><strong>Resetar</strong></button>
+      <button (click)="logout()" type="button" class="btn btn-danger"><strong>Sair</strong></button>
     </div>
-  </div>
   </div>
 </nav>
