--- a/JogoQuiz_FrontEnd/src/app/component/Finish/finish-painel/finish-painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Finish/finish-painel/finish-painel.component.html
@@ -20,11 +20,9 @@
                   </div>
                 </div>
               </div>
-
               <div class="button">
-                <button (click)="novoJogo()" data-mdb-ripple-init type="button" class="btn btn-primary btn-block">
-                  <strong>Novo Jogo</strong>
-                </button>
+                <button (click)="novoJogo()" type="button" class="btn btn-success"><strong>Novo Jogo</strong></button>
+                <button (click)="logout()" type="button" class="btn btn-danger"><strong>Sair</strong></button>
               </div>
             </div>
           </div>
