--- a/JogoQuiz_FrontEnd/src/app/component/Login/login-painel/painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Login/login-painel/painel.component.html
@@ -1,40 +1,28 @@
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title text-center"><strong>Login</strong></h5>
-          <form (ngSubmit)="onLogin()">
-            <div class="form-group">
-              <label for="usuario"><strong>Usuário</strong></label>
-              <input
-                type="text"
-                class="form-control"
-                id="usuario"
-                [(ngModel)]="usuario"
-                name="usuario"
-                placeholder="Seu usuário"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <label for="senha"><strong>Senha</strong></label>
-              <input
-                type="password"
-                class="form-control"
-                id="senha"
-                [(ngModel)]="senha"
-                name="senha"
-                placeholder="Sua senha"
-                required
-              />
-            </div>
-            <div class="button">
-              <button type="submit" class="btn btn-primary btn-block">
-                <strong>Entrar</strong>
-              </button>
-            </div>
-          </form>
+<div class="background-image">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title text-center"><strong>Login</strong></h5>
+            <form (ngSubmit)="onLogin()">
+              <div class="form-group">
+                <label for="usuario"><strong>Usuário</strong></label>
+                <input type="text" class="form-control" id="usuario" [(ngModel)]="usuario" name="usuario"
+                  placeholder="Seu usuário" required />
+              </div>
+              <div class="form-group">
+                <label for="senha"><strong>Senha</strong></label>
+                <input type="password" class="form-control" id="senha" [(ngModel)]="senha" name="senha"
+                  placeholder="Sua senha" required />
+              </div>
+              <div class="button">
+                <button type="submit" class="btn btn-primary btn-block">
+                  <strong>Entrar</strong>
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
