Modificaçoes Register(Parte 1)/ register service

--- a/JogoQuiz_FrontEnd/src/app/component/Register/register-root/register-root.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Register/register-root/register-root.component.html
@@ -1,1 +1,3 @@
-<p>register-root works!</p>
+<app-register-top></app-register-top>
+<app-register-painel></app-register-painel>
+<app-register-footer></app-register-footer>
