--- a/JogoQuiz_FrontEnd/src/app/component/Register/register-top/register-top.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Register/register-top/register-top.component.html
@@ -1,1 +1,8 @@
-<p>register-top works!</p>
+<nav class="navbar bg-dark navbar-dark navbar-expand">
+  <div class="container-fluid justify-content-center" >
+      <button type="button" class="btn btn-success">
+        <a routerLink="/Login" class="navbar-brand mb-0"><strong>Login</strong></a>
+      </button>
+
+  </div>
+</nav>
