--- a/JogoQuiz_FrontEnd/src/app/component/Login/login-painel/painel.component.css
+++ b/JogoQuiz_FrontEnd/src/app/component/Login/login-painel/painel.component.css
@@ -4,13 +4,15 @@
   }
 
   .card {
-    opacity: 0.95; /* 80% opaco, 20% transparente */
+    width: 100%;
+    opacity: 0.95;
   }
 
   .card-title{
     color: aliceblue;
     background-color: rgb(121, 146, 173);
     border-radius: 5px;
+    text-shadow: -1px -1px 0 #2e2b2b, 1px -1px 0 #2e2b2b, -1px 1px 0 #2e2b2b, 1px 1px 0 #2e2b2b;
   }
 
   .button{
