--- a/JogoQuiz_FrontEnd/src/app/component/Register/register-painel/register-painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Register/register-painel/register-painel.component.html
@@ -4,6 +4,22 @@
       <div class="col-md-6">
         <div class="card">
           <div class="card-body">
+
+            <div *ngIf="successMessage" class="toast align-items-center text-bg-success border-0 show" role="alert" aria-live="assertive" aria-atomic="true" style="position: fixed; top: 20px; right: 20px; z-index: 1050;">
+              <div class="d-flex">
+                <div class="toast-body">
+                  {{ successMessage }}
+                </div>
+                <button type="button" class="btn-close btn-close-white me-2 m-auto" (click)="successMessage = ''" aria-label="Close"></button>
+              </div>
+            </div>
+
+            <!-- Mensagem de Erro -->
+            <div *ngIf="errorMessage" class="alert alert-danger alert-dismissible fade show" role="alert">
+              {{ errorMessage }}
+              <button type="button" class="btn-close" (click)="errorMessage = ''"></button>
+            </div>
+
             <h5 class="card-title text-center"><strong>Cadastrar</strong></h5>
             <form (ngSubmit)="registerPlayer()">
               <div class="form-group">
