--- a/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Quiz/quiz-painel/quiz-painel.component.html
@@ -6,6 +6,16 @@
           <div class="card">
             <div class="card-body flex-grow-1">
               <ng-container *ngFor="let question of player.question">
+
+                <div *ngIf="errorMessage" class="toast align-items-center text-bg-danger border-0 show" role="alert" aria-live="assertive" aria-atomic="true" style="position: fixed; top: 20px; right: 20px; z-index: 1050;">
+                  <div class="d-flex">
+                    <div class="toast-body">
+                      {{ errorMessage }}
+                    </div>
+                    <button type="button" class="btn-close btn-close-white me-2 m-auto" (click)="errorMessage = ''" aria-label="Close"></button>
+                  </div>
+                </div>
+
                 <h5 class="card-title text-center"><strong>{{ question.category }}</strong></h5>
                 <form>
                   <div class="hp-bar">
