--- a/JogoQuiz_FrontEnd/src/app/component/Register/register-painel/register-painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Register/register-painel/register-painel.component.html
@@ -14,9 +14,13 @@
               </div>
             </div>
 
-            <div *ngIf="errorMessage" class="alert alert-danger alert-dismissible fade show" role="alert">
-              {{ errorMessage }}
-              <button type="button" class="btn-close" (click)="errorMessage = ''"></button>
+            <div *ngIf="errorMessage" class="toast align-items-center text-bg-danger border-0 show" role="alert" aria-live="assertive" aria-atomic="true" style="position: fixed; top: 20px; right: 20px; z-index: 1050;">
+              <div class="d-flex">
+                <div class="toast-body">
+                  {{ errorMessage }}
+                </div>
+                <button type="button" class="btn-close btn-close-white me-2 m-auto" (click)="errorMessage = ''" aria-label="Close"></button>
+              </div>
             </div>
 
             <h5 class="card-title text-center"><strong>Cadastrar</strong></h5>
