--- a/JogoQuiz_FrontEnd/src/app/component/Finish/finish-painel/finish-painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Finish/finish-painel/finish-painel.component.html
@@ -22,7 +22,7 @@
               </div>
               <div class="button">
                 <button (click)="novoJogo()" type="button" class="btn btn-success"><strong>Novo Jogo</strong></button>
-                <button (click)="logout()" type="button" class="btn btn-danger"><strong>Sair</strong></button>
+                <button (click)="sair()" type="button" class="btn btn-danger"><strong>Sair</strong></button>
               </div>
             </div>
           </div>
