--- a/JogoQuiz_FrontEnd/src/app/component/Login/login-painel/painel.component.html
+++ b/JogoQuiz_FrontEnd/src/app/component/Login/login-painel/painel.component.html
@@ -4,6 +4,16 @@
       <div class="col-md-6">
         <div class="card">
           <div class="card-body">
+
+            <div *ngIf="errorMessage" class="toast align-items-center text-bg-danger border-0 show" role="alert" aria-live="assertive" aria-atomic="true" style="position: fixed; top: 20px; right: 20px; z-index: 1050;">
+              <div class="d-flex">
+                <div class="toast-body">
+                  {{ errorMessage }}
+                </div>
+                <button type="button" class="btn-close btn-close-white me-2 m-auto" (click)="errorMessage = ''" aria-label="Close"></button>
+              </div>
+            </div>
+
             <h5 class="card-title text-center"><strong>Login</strong></h5>
             <form (ngSubmit)="onLogin()">
               <div class="form-group">
